--- a/src/_styles/custom.scss
+++ b/src/_styles/custom.scss
@@ -2,6 +2,10 @@ html, body{
 	height: 100%;
 }
 
+h1{
+	font-size: 2.25rem;
+}
+
 body{
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
